--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@dr.pogodin/react-helmet": "^3.0.2",
     "@emailjs/browser": "^4.4.1",
+    "axios": "^1.13.5",
     "framer-motion": "^12.23.12",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
